apiserver/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapi
  labels:
    app: simpleapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpleapi
  template:
    metadata:
      labels:
        app: simpleapi
    spec:
      containers:
        - name: simpleapi
          image: sprysio/simpleapi
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          #livenessProbe:
          #  httpGet:
          #    path: /api/actuator/health
          #    port: 8080
          #  initialDelaySeconds: 60
          #  periodSeconds: 60
          #readinessProbe:
          #  httpGet:
          #    path: /api/actuator/health
          #    port: 8080
          #  initialDelaySeconds: 60
          #  periodSeconds: 60
