apiserver/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-svc
  labels:
    app: simpleapi
spec:
  type: ClusterIP
  ports:
    - name: simpleapi-http
      port: 8080
      targetPort: 8080
  selector:
    app: simpleapi
